--- a/miniprogram/pages/chat/chat.wxml
+++ b/miniprogram/pages/chat/chat.wxml
@@ -1,11 +1,9 @@
 <!--pages/chat/chat.wxml-->
 <view class="news" bindtap='outbtn'>
   <!-- <view class="chat-notice">说出您想知道的?</view> -->
-  <!-- <rich-text nodes="{{test}}"></rich-text> -->
   <view class="historycon">
     <scroll-view scroll-y="true" class="history" scroll-top="{{scrollTop}}">
-      <block wx:for="{{newslist}}" wx:key>
-        <view>{{item.date}}</view>
+      <block wx:for="{{newslist}}" wx:key="item">
         <!--send  -->
         <view class="chat-news request" wx:if="{{item.sender == 'client'}}">
           <view class='news-content'>
@@ -29,7 +27,7 @@
           </view>
           <view class='news-content'>
             <block wx:if="{{item.type=='text'}}">
-              <view class='response-content new_txt '>{{item.text}}</view>
+              <view class='response-content new_txt ' style="white-space: pre-wrap">{{item.text}}</view>
             </block>
             <block wx:if="{{item.type=='richtext'}}">
               <view class='response-content new_rich_txt '>
@@ -62,6 +60,17 @@
           </view>
         </view>
       </block>
+      <block wx:if="{{sendLoading}}">
+        <view class="chat-news response">
+          <view class="news-avatar">
+            <image class='avatar' src="./images/logo.png"></image>
+            <!-- <text class="name">软软</text> -->
+          </view>
+          <view class='news-content'>
+            <view class='response-content new_txt loading'>软软正在努力的思考中<image class="send-button-inner" src="./images/bars.svg"></image></view>
+          </view>
+        </view>
+      </block>
       <block wx:if="{{newslist.length <= 0}}">
         <view class="empty-message">输入类似"写一篇200字的描写杨树的短文"试试</view>
       </block>
@@ -91,7 +100,7 @@
   <form bindreset="cleanInput">
     <view class="sendMessage">
       <!-- <view class="item button" bindtap='increase'>+</view> -->
-      <input class="item input" confirm-type="send" type="text" placeholder="请输入聊天内容..." value="{{massage}}" bindinput='bindChange' bindconfirm="bindConfirm"></input>
+      <input class="item input" disabled="{{sendLoading}}" confirm-type="send" type="text" placeholder="请输入聊天内容..." value="{{massage}}" bindinput='bindChange' bindconfirm="bindConfirm"></input>
       <button form-type="reset" bindtap='send' class="item">
         <view class="item button send-button">
           <image class="send-button-inner" src="./images/send.svg"></image>
