--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -4,38 +4,64 @@
 }
 
 .rr-avatar {
+  margin-top:80rpx;
   overflow: hidden;
-  background-color: #999999;
-  border: 1px solid #999999;
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+  width: 480rpx;
+  height: 480rpx;
 }
 
-.hi_text {
-  padding: 10px 20px;
-  margin-top: 20px;
+.top-title {
+  background-color: #A7E9BB;
+  color: #717372;
+  font-weight: 600;
+  font-size:20rpx;
+  width:300rpx;
+  padding:16rpx 40rpx;
+  margin-top:40rpx;
+  border-radius: 36rpx;
+}
+
+.hi_text0 {
+  margin-top:40rpx;
   text-indent: 20px;
-  line-height: 26px;
-  color: #999999;
+  line-height: 30px;  
+  color: #717372;
+  font-size: 26rpx;
+  font-weight: 400;
+}
+.hi_text {
+  text-indent: 20px;
+  line-height: 20px;
+  font-size: 22rpx;
+  color: #717372;
+  font-weight: 500;
 }
 
 .entry-button-container {
   display: block;
-  position: fixed;
-  bottom: 60px;
+  position: relative;
   width: 100%;
   text-align: center;
   margin: 0 auto;
+  margin-top:60rpx;
 }
 
 .entry-button {
-  display: block;
-  width: 80%;
-  line-height: 40px;
-  margin-left: 10%;
-  background-color: coral;
-  border-radius: 6px;
-  color: #FFFFFF;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.entry-button .bg{
+  height:100rpx;
+  width:480rpx;
+  border-radius: 60rpx;
+  background-color: #499CFB;
+}
+.entry-button .img{
+  height:76rpx;
+  width:220rpx;
+  position: absolute;
 }
